# chunkah

./: AGENTS.md  Cargo.toml  Containerfile.splitter  Justfile  README.md
.github/workflows/: ci.yml
.opencode/skills/extract-oci-archive/: SKILL.md
src/: cmd_build.rs  ocibuilder.rs  scan.rs  tar.rs
src/components/: alpm.rs  mod.rs  rpm.rs  xattr.rs
tests/e2e/: lib.sh  test-buildtime-options.sh  test-buildtime-special-files.sh  test-buildtime.sh  test-existing-build.sh  test-existing-run.sh  test-fcos.sh
tests/fixtures/: regenerate.sh
tests/fixtures/arch-rootfs/var/lib/pacman/local/filesystem-2025.10.12-1/: desc  files  mtree
tests/fixtures/arch-rootfs/var/lib/pacman/local/iana-etc-20260203-1/: desc  files  mtree
tools/: release.py  split-and-diff.sh
