[package]
name = "chunkah"
version = "0.1.0"
description = "An OCI building tool for content-based layers"
authors = ["Jonathan Lebon <jonathan@jlebon.com>"]
repository = "https://github.com/jlebon/chunkah"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
cap-std-ext = { version = "4", default-features = false, features = ["fs_utf8"] }
chrono = "0.4"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "env"] }
ctrlc = "3.5.1"
flate2 = "1"
indexmap = "2"
libc = "0.2"
ocidir = "0.6"
rpm-qa = { git = "https://github.com/jlebon/rpm-qa-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"

[dev-dependencies]
fs-set-times = "0.20.3"
maplit = "1"
tempfile = "3"
